@@ -1,4 +1,5 @@
 1.1.0
+   - bug [11291] "Bør vi ikke renavngive ObjectIdentifier.java til IObjectIdentifier.java?"
    - bug [10534] "parallelisering i storeCargoContainer pluginet"
    - bug [11673] "CargoObjectInfoTest skal opdateres"
    - bug [11276] "Er der en grund til at vi har lavet vores "egen implementation" af OpenSearchException?"
